# eliza-rag

./: .env.example  .gitignore  ANSWER_PIPELINE_FIXES.md  ARCHITECTURE.md  DECISIONS.md  HIGH_LEVEL_PLAN.md  IMPLEMENTATION_KANBAN.md  INDEX_PORTABILITY_HANDOFF.md  INDEX_PORTABILITY_NEXT_STEPS.md  LIMITATIONS.md  LIVE_DEMO_EXECUTION_STEPS.md  PHASE_03_HANDOFF.md  PHASE_03_KICKOFF.md  PHASE_04_KICKOFF.md  PHASE_05_CLEANUP_HANDOFF.md  PHASE_05_HANDOFF.md  PHASE_05_KICKOFF.md  PHASE_05_SESSION_HANDOFF.md  PHASE_06B_RERANKING_KICKOFF.md  PHASE_06B_RERANKING_RESULTS_HANDOFF.md  PHASE_06C_COMPANY_DETECTION_FOLLOWUP_KICKOFF.md  PHASE_06C_COMPANY_DETECTION_FOLLOWUP_RESULTS_HANDOFF.md  PHASE_06C_EVALUATION_BRIEF.md  PHASE_06C_QUERY_TARGETING_KICKOFF.md  PHASE_07C_PROVIDER_EXPERIMENT_PREP_HANDOFF.md  PHASE_08_EVIDENCE_DRIVEN_PROVIDER_EVALUATION_KICKOFF.md  PHASE_09_ANSWER_EVAL_AND_VISUALIZATION_HANDOFF.md  PHASE_09_ANSWER_EVAL_AND_VISUALIZATION_KICKOFF.md  PHASE_09_GEMINI_JUDGE_RERUN_INSTRUCTIONS.md  PHASE_09_PART_02_ANSWER_COMPARISON_FOLLOWUP_HANDOFF.md  PHASE_10_FINAL_DEMO_LOCK_HANDOFF.md  PHASE_10_FINAL_DEMO_LOCK_KICKOFF.md  POST_LIVE_TESTING_PHASE_DECISION_HANDOFF.md  PROMPT_ITERATION_LOG.md  QUALITY_NOTES.md  README.md  README_DEPRECATED.md  SESSION_HANDOFF.md  agents.md  prompt.txt  (+2 more)
.internal_docs/: LEGACY_SESSION_HANDOFF.md  PHASE_01_HANDOFF.md  PHASE_01_IMPLEMENTATION_PROMPT.md  PHASE_02_HANDOFF.md  PHASE_02_KICKOFF.md  PHASE_04_HANDOFF.md  PHASE_05_BACKEND_EXPANSION.md  PHASE_05_BACKEND_EXPANSION_HANDOFF.md  PHASE_05_CLEANUP.md  PHASE_05_LOCAL_FALLBACK_FOLLOWUP.md  README.md  (+20 more)
(+84 files in other folders)
